test/integration/parse-error/Foo.hs
module Foo where

-- | Some documentation
foo :: Int
foo =
